# crucible

./: .gitignore  ARCHITECTURE.md  BIOINFORMATICS_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CURATION_LAYER_SPEC.md  Cargo.toml  DESIGN.md  INTEGRATION.md  README.md  ROADMAP.md  TESTING.md
crates/crucible/: Cargo.toml
crates/crucible-cli/: Cargo.toml  build.rs
crates/crucible-cli/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/crucible-cli/frontend/src/: App.tsx  index.css  main.tsx  types.ts
crates/crucible-cli/frontend/src/api/: client.ts
crates/crucible-cli/frontend/src/components/: AskQuestionDialog.tsx  Badge.tsx  Button.tsx  Card.tsx  DataPreview.tsx  Progress.tsx  StatusBar.tsx  SuggestionCard.tsx  SuggestionGroup.tsx  Toast.tsx  index.ts
crates/crucible-cli/src/: cli.rs  main.rs  web.rs
crates/crucible-cli/src/commands/: analyze.rs  apply.rs  batch.rs  diff.rs  mod.rs  review.rs  status.rs
crates/crucible-cli/src/server/: app.rs  error.rs  mod.rs  state.rs
crates/crucible-cli/src/server/handlers/: curation.rs  data.rs  decisions.rs  explain.rs  mod.rs
crates/crucible/benches/: analysis_benchmarks.rs  parser_benchmarks.rs  validator_benchmarks.rs
crates/crucible/examples/: analyze.rs
crates/crucible/fuzz/: Cargo.toml  README.md
crates/crucible/fuzz/fuzz_targets/: fuzz_accession.rs  fuzz_date.rs  fuzz_ontology.rs  fuzz_parser.rs  fuzz_taxonomy.rs
crates/crucible/src/: crucible.rs  error.rs  lib.rs
crates/crucible/src/bio/: accession.rs  biosample.rs  mixs.rs  mod.rs  ontology.rs  taxonomy.rs  validators.rs
crates/crucible/src/curation/: context.rs  decision.rs  layer.rs  mod.rs  persistence.rs
crates/crucible/src/inference/: fusion.rs  mod.rs  semantic.rs  statistical.rs
crates/crucible/src/input/: context.rs  mod.rs  parser.rs  source.rs
crates/crucible/src/llm/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  provider.rs
crates/crucible/src/schema/: column.rs  mod.rs  table.rs  types.rs
crates/crucible/src/suggestion/: generator.rs  mod.rs  suggestion.rs
crates/crucible/src/transform/: engine.rs  mod.rs  operations.rs
crates/crucible/src/validation/: mod.rs  observation.rs  validators.rs
crates/crucible/tests/: curation_test.rs  generate_golden_expected.rs  golden_tests.rs  integration_test.rs  mixs_conformance_test.rs  ontology_accuracy_test.rs  property_tests.proptest-regressions  property_tests.rs  real_world_validation_test.rs
test_data/: README.md  clinical_trial_metadata.csv  ibd_cohort_metadata.tsv  ibd_cohort_metadata_curated.json  ibd_cohort_metadata_curated.tsv  microbiome_study_metadata.tsv  sample_accessions.tsv
test_data/golden/: README.md
test_data/golden/accession_formats/: expected.json  input.tsv  manifest.json
test_data/golden/case_consistency/: expected.json  input.tsv  manifest.json
test_data/golden/coordinate_validation/: expected.json  input.tsv  manifest.json
test_data/golden/date_formats/: expected.json  input.tsv  manifest.json
test_data/golden/duplicate_samples/: expected.json  input.tsv  manifest.json
test_data/golden/empty_values/: expected.json  input.tsv  manifest.json
test_data/golden/identifier_patterns/: expected.json  input.tsv  manifest.json
test_data/golden/mixs_compliance/: expected.json  input.tsv  manifest.json
test_data/golden/null_value_variants/: expected.json  input.tsv  manifest.json
test_data/golden/numeric_range/: expected.json  input.tsv  manifest.json
test_data/golden/outlier_detection/: expected.json  input.tsv  manifest.json
test_data/golden/taxonomy_validation/: expected.json  input.tsv  manifest.json
test_data/golden/whitespace_issues/: expected.json  input.tsv  manifest.json
test_data/real_world/: README.md  ncbi_environmental_submission.tsv  ncbi_human_clinical.tsv  ncbi_microbiome_submission.tsv
