[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/crucible/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Scott Handley"]
repository = "https://github.com/scotthandley/crucible"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV/Data parsing
csv = "1.3"

# Error handling
thiserror = "2.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1.10"

# Ordered maps (preserve column order)
indexmap = { version = "2.0", features = ["serde"] }

# Hashing
sha2 = "0.10"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Async runtime (for future LLM integration)
tokio = { version = "1", features = ["full"] }
