[package]
name = "crucible"
description = "LLM-native data curation tool for tabular datasets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
indexmap.workspace = true
sha2.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
