[package]
name = "crucible"
description = "LLM-native data curation tool for tabular datasets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
indexmap.workspace = true
sha2.workspace = true
reqwest.workspace = true
once_cell = "1.19"
fastrand = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "validator_benchmarks"
harness = false

[[bench]]
name = "analysis_benchmarks"
harness = false
